# deep-anomaly-ips

./: .gitattributes  .gitignore  LICENSE  README.md  main  main.cpp  main.py  makefile
Data Clean/: DataCleaning.py
Intrusion Prevention system/include/sniffing/: FlowTracker.hpp  PacketCapture.hpp  PacketParser.hpp
Intrusion Prevention system/include/utils/: FeatureExtractor.hpp
Intrusion Prevention system/src/: PacketCapture.cpp
Intrusion Prevention system/src/sniffing/: FlowTracker.cpp  PacketCapture.cpp  PacketParser.cpp
Intrusion Prevention system/src/utils/: FeatureExtractor.cpp
cplus/include/: PacketCapture.hpp
cplus/src/: PacketCapture.cpp
ips_gui/: CMakeLists.txt  command  ipsgui.cpp  ipsgui.h  main.cpp
python/: README.md  requirements.txt
python/data/: README.md
python/data/processed/: processed_data.csv
python/notebooks/: hybrid_lstm_cnn_ids_cic2017.ipynb  preprocess.ipynb
python/utils/: getTheData.py  preprocess.ipynb  preprocess.py
shared/ips_gui/: CMakeLists.txt  ipsgui.cpp  ipsgui.h  main.cpp
shared/layout/: TUI.py
